feat: More statistical analysis

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -124,9 +124,9 @@ num-rngs = 4
 **.fg.stack.app[0].localPort = 443
 
 [Config targetDc]
-#repeat=30
+repeat=25
 *.serviceName = "service"
 
 [Config targetFog]
-#repeat=30
+repeat=25
 *.serviceName = "service2"
