feat: More statistical analysis!

--- a/simulations/EdgeMediumScenario/omnetpp.ini
+++ b/simulations/EdgeMediumScenario/omnetpp.ini
@@ -66,7 +66,6 @@ num-rngs = 4
 **.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
-
 # Blades settings
 *.dc.numBlades = 40
 *.dc.blade[*].staticAppAssignment = false
@@ -82,18 +81,18 @@ num-rngs = 4
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
 # Blades settings
-*.fg.numBlades = 10
-*.fg.blade[*].staticAppAssignment = false
-*.fg.blade[*].isVirtualHardware = true
-*.fg.blade[*].maxUsers = 8
-*.fg.blade[*].maxVMs = 8
-*.fg.blade[*].numCpuCores = 8
-*.fg.blade[*].memorySize = 16GB
-*.fg.blade[*].diskSize = 2000GB
-*.fg.blade[*].diskReadBandwidth = 500Mbps
-*.fg.blade[*].diskWriteBandwidth = 500Mbps
-*.fg.blade[*].cpu.cpuCore[*].speed = 60000
-*.fg.blade[*].cpu.cpuCore[*].tick = 60s
+*.fg*.numBlades = 10
+*.fg*.blade[*].staticAppAssignment = false
+*.fg*.blade[*].isVirtualHardware = true
+*.fg*.blade[*].maxUsers = 8
+*.fg*.blade[*].maxVMs = 8
+*.fg*.blade[*].numCpuCores = 8
+*.fg*.blade[*].memorySize = 16GB
+*.fg*.blade[*].diskSize = 2000GB
+*.fg*.blade[*].diskReadBandwidth = 500Mbps
+*.fg*.blade[*].diskWriteBandwidth = 500Mbps
+*.fg*.blade[*].cpu.cpuCore[*].speed = 60000
+*.fg*.blade[*].cpu.cpuCore[*].tick = 60s
 
 ## Config Ip assignment
 *.configurator.config = xml("<config> \
@@ -102,31 +101,35 @@ num-rngs = 4
 </config>")
 #*.configurator.dumpConfig = "ips.xml"
 
-*.controller.hy.apps = "SmartHomeAppEndToEnd"
-*.controller.ns.dns = "10.0.0.1"
-
 **.dc.**.enableQueue = false
 **.dc.**.hasCloudEvents = false
 **.dc.serviceDeployed = "service"
 
-**.fg.**.enableQueue = false
-**.fg.**.hasCloudEvents = false
-**.fg.serviceDeployed = "service2"
+**.fg*.**.enableQueue = false
+**.fg*.**.hasCloudEvents = false
+**.fg1.serviceDeployed = "fg1"
+**.fg2.serviceDeployed = "fg2"
+**.fg3.serviceDeployed = "fg3"
+**.fg4.serviceDeployed = "fg4"
 
 **.dc.stack.numApps = 1
 **.dc.stack.app[0].typename = "SimService"
 **.dc.stack.app[0].replyDelay = 0s
 **.dc.stack.app[0].localPort = 443
 
-**.fg.stack.numApps = 1
-**.fg.stack.app[0].typename = "SimService"
-**.fg.stack.app[0].replyDelay = 0s
-**.fg.stack.app[0].localPort = 443
+**.fg*.stack.numApps = 1
+**.fg*.stack.app[0].typename = "SimService"
+**.fg*.stack.app[0].replyDelay = 0s
+**.fg*.stack.app[0].localPort = 443
+
+*.users[*].typename = "SmartHouse"
+**.controller.ns.dns = "10.0.0.1"
 
 [Config targetDc]
-#repeat=30
-*.serviceName = "service"
+*.users*.serviceName = "service"
 
 [Config targetFog]
-#repeat=30
-*.serviceName = "service2"
+*.users[0..1].serviceName = "fg1"
+*.users[2..3].serviceName = "fg2"
+*.users[4..6].serviceName = "fg3"
+*.users[7..9].serviceName = "fg4"
