feat: Statistical analysis of resources for EdgeBigScenario

--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -85,7 +85,7 @@ num-rngs = 4
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
 # Blades settings
-*.fg*.numBlades = 10
+*.fg*.numBlades = 1
 *.fg*.blade[*].staticAppAssignment = false
 *.fg*.blade[*].isVirtualHardware = true
 *.fg*.blade[*].maxUsers = 8
@@ -145,28 +145,28 @@ num-rngs = 4
 **.fgE3.serviceDeployed = "fgE3"
 
 # Users config
-*.usersA[0..1].typename = "SmartFactory"
-*.usersA[2..3].typename = "SmartBuilding"
+*.usersA[0..1].typename = "SmartBuilding"
+*.usersA[2..3].typename = "SmartFactory"
 *.usersA[4..7].typename = "SmartFarm"
 *.usersA[8..19].typename = "SmartHouse"
 
-*.usersB[0..1].typename = "SmartFactory"
-*.usersB[2..3].typename = "SmartBuilding"
+*.usersB[0..1].typename = "SmartBuilding"
+*.usersB[2..3].typename = "SmartFactory"
 *.usersB[4..7].typename = "SmartFarm"
 *.usersB[8..19].typename = "SmartHouse"
 
-*.usersC[0..1].typename = "SmartFactory"
-*.usersC[2..3].typename = "SmartBuilding"
+*.usersC[0..1].typename = "SmartBuilding"
+*.usersC[2..3].typename = "SmartFactory"
 *.usersC[4..7].typename = "SmartFarm"
 *.usersC[8..19].typename = "SmartHouse"
 
-*.usersD[0..1].typename = "SmartFactory"
-*.usersD[2..3].typename = "SmartBuilding"
+*.usersD[0..1].typename = "SmartBuilding"
+*.usersD[2..3].typename = "SmartFactory"
 *.usersD[4..7].typename = "SmartFarm"
 *.usersD[8..19].typename = "SmartHouse"
 
-*.usersE[0..1].typename = "SmartFactory"
-*.usersE[2..3].typename = "SmartBuilding"
+*.usersE[0..1].typename = "SmartBuilding"
+*.usersE[2..3].typename = "SmartFactory"
 *.usersE[4..7].typename = "SmartFarm"
 *.usersE[8..19].typename = "SmartHouse"
 
@@ -178,24 +178,27 @@ num-rngs = 4
 
 [Config targetFog]
 #repeat=5
+*.usersA[0..1].serviceName =   "fgA1"
+*.usersA[2..7].serviceName =   "fgA2"
+*.usersA[8..15].serviceName =  "fgA3"
+*.usersA[16..19].serviceName =  "service"
 
-# Point the ranges to the corresponding Fog Node
-*.usersA[0..6].serviceName =   "fgA1"
-*.usersA[7..13].serviceName =  "fgA2"
-*.usersA[14..19].serviceName = "fgA3"
+*.usersB[0..1].serviceName =   "fgB1"
+*.usersB[2..7].serviceName =   "fgB2"
+*.usersB[8..15].serviceName =  "fgB3"
+*.usersB[16..19].serviceName =  "service"
 
-*.usersB[0..6].serviceName =   "fgB1"
-*.usersB[7..13].serviceName =  "fgB2"
-*.usersB[14..19].serviceName = "fgB3"
+*.usersC[0..1].serviceName =   "fgC1"
+*.usersC[2..7].serviceName =   "fgC2"
+*.usersC[8..15].serviceName =  "fgC3"
+*.usersC[16..19].serviceName =  "service"
 
-*.usersC[0..6].serviceName =   "fgC1"
-*.usersC[7..13].serviceName =  "fgC2"
-*.usersC[14..19].serviceName = "fgC3"
+*.usersD[0..1].serviceName =   "fgD1"
+*.usersD[2..7].serviceName =   "fgD2"
+*.usersD[8..15].serviceName =  "fgD3"
+*.usersD[16..19].serviceName =  "service"
 
-*.usersD[0..6].serviceName =   "fgD1"
-*.usersD[7..13].serviceName =  "fgD2"
-*.usersD[14..19].serviceName = "fgD3"
-
-*.usersE[0..6].serviceName =   "fgE1"
-*.usersE[7..13].serviceName =  "fgE2"
-*.usersE[14..19].serviceName = "fgE3"
+*.usersE[0..1].serviceName =   "fgE1"
+*.usersE[2..7].serviceName =   "fgE2"
+*.usersE[8..15].serviceName =  "fgE3"
+*.usersE[16..19].serviceName =  "service"
