feat: Fixed correlation issues

--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -49,15 +49,31 @@ eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
 **.ipv4.**.scalar-recording = false
 
 ## Random seeds fix
-num-rngs = 4
+num-rngs = 12
 
-**.local*.ipv4Delayer.rng-0 = 1
-**.local*.ipv4Delayer.config = xmldoc("local.xml")
+**.localA.ipv4Delayer.rng-0 = 1
+**.localA.ipv4Delayer.config = xmldoc("local.xml")
+**.localB.ipv4Delayer.rng-0 = 2
+**.localB.ipv4Delayer.config = xmldoc("local.xml")
+**.localC.ipv4Delayer.rng-0 = 3
+**.localC.ipv4Delayer.config = xmldoc("local.xml")
+**.localD.ipv4Delayer.rng-0 = 4
+**.localD.ipv4Delayer.config = xmldoc("local.xml")
+**.localE.ipv4Delayer.rng-0 = 5
+**.localE.ipv4Delayer.config = xmldoc("local.xml")
 
-**.metro*.ipv4Delayer.rng-0 = 2
-**.metro*.ipv4Delayer.config = xmldoc("metropolitan.xml")
+**.metroA.ipv4Delayer.rng-0 = 6
+**.metroA.ipv4Delayer.config = xmldoc("metropolitan.xml")
+**.metroB.ipv4Delayer.rng-0 = 7
+**.metroB.ipv4Delayer.config = xmldoc("metropolitan.xml")
+**.metroC.ipv4Delayer.rng-0 = 8
+**.metroC.ipv4Delayer.config = xmldoc("metropolitan.xml")
+**.metroD.ipv4Delayer.rng-0 = 9
+**.metroD.ipv4Delayer.config = xmldoc("metropolitan.xml")
+**.metroE.ipv4Delayer.rng-0 = 10
+**.metroE.ipv4Delayer.config = xmldoc("metropolitan.xml")
 
-**.backbone*.ipv4Delayer.rng-0 = 3
+**.backbone*.ipv4Delayer.rng-0 = 11
 **.backbone*.ipv4Delayer.config = xmldoc("backbone.xml")
 
 # SimSchema settings
