--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -54,8 +54,8 @@ num-rngs = 4
 **.local.ipv4Delayer.config = xmldoc("local.xml")
 **.metropolitan.ipv4Delayer.rng-0 = 2
 **.metropolitan.ipv4Delayer.config = xmldoc("metropolitan.xml")
-**.backbone.ipv4Delayer.rng-0 = 3
-**.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
+#**.backbone.ipv4Delayer.rng-0 = 3
+#**.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
 
 # SimSchema settings
 *.simData.simSchema.typename = "SimSchemaMySQL"
