fix: Fixed the graphics and some parameters

--- a/simulations/EdgeBigScenario/omnetpp.ini
+++ b/simulations/EdgeBigScenario/omnetpp.ini
@@ -188,6 +188,13 @@ num-rngs = 12
 
 **.controller.ns.dns = "10.0.0.1"
 
+*.usersA[*].sensor[*].model.rng-0 = 6
+*.usersB[*].sensor[*].model.rng-0 = 7
+*.usersC[*].sensor[*].model.rng-0 = 8
+*.usersD[*].sensor[*].model.rng-0 = 9
+*.usersE[*].sensor[*].model.rng-0 = 10
+
+
 [Config targetDc]
 #repeat=5
 *.user*.serviceName = "service"
