--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -1,127 +1,23 @@
 [General]
-## TEMPORAL
-print-undisposed=true
-
-## Time resolution
-sim-time-limit = 1h
-#simtime-resolution = ps
-
-## Comand line environment
-cmdenv-express-mode = false
-cmdenv-performance-display=false
-cmdenv-event-banners=false
-#ned-path = ../../src;../;
-
-## Network
 network = SimpleFogNetwork
 
-## Log
-**.cloudProvider.cmdenv-log-level = off
-**.userGenerator.cmdenv-log-level = error
-**.dcManager.cmdenv-log-level = error
-**.cmdenv-log-level = off	## off, error, info, debug and trace
-cmdenv-log-prefix = "(%t):[%l] %m  "
+# Standard configuration
+include ../Templates/general.ini
+include delays.ini
 
-## Allow to examine details of recorded history of a simulation, focusing on the behavior instead of the statistical results.
-#record-eventlog = false
-#**.module-eventlog-recording = false
-eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
+# Nodes configuration
+include dc.ini
+include fog.ini
 
-## Recording of simulation results - recordScalar() - recordStatistic()
-
-#**.statistic-recording = false  ## from a @statistic in ned file
-#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-#**.vector-recording = false ## output vector (recorded using cOutVector objects)
-#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
-
-**.sensor**.statistic-recording = false
-**.actuator**.statistic-recording = false
-**.ap.**.statistic-recording = false
-**.dns**.statistic-recording = false
-**.eth[*].**.statistic-recording = false
-**.ipv4.**.statistic-recording = false
-
-**.dns**.scalar-recording = false
-**.ap**.scalar-recording = false
-**.sensor**.scalar-recording = false
-**.actuator**.scalar-recording = false
-**.eth[*].**.scalar-recording = false
-**.ipv4.**.scalar-recording = false
-
-## Random seeds fix
-num-rngs = 4
-**.local.ipv4Delayer.rng-0 = 1
-**.local.ipv4Delayer.config = xmldoc("local.xml")
-**.metropolitan.ipv4Delayer.rng-0 = 2
-**.metropolitan.ipv4Delayer.config = xmldoc("metropolitan.xml")
-#**.backbone.ipv4Delayer.rng-0 = 3
-#**.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
-
-# SimSchema settings
-*.simData.simSchema.typename = "SimSchemaMySQL"
-*.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
-*.simData.manager.experiment = "Test"
-
-# Routing settings
-**.ipv4.arp.typename = "GlobalArp"
-*.*.ipv4.routingTable.netmaskRoutes = ""
-
-
-# Blades settings
-*.dc.numBlades = 40
-*.dc.blade[*].staticAppAssignment = false
-*.dc.blade[*].isVirtualHardware = true
-*.dc.blade[*].maxUsers = 16
-*.dc.blade[*].maxVMs = 16
-*.dc.blade[*].numCpuCores = 16
-*.dc.blade[*].memorySize = 64GB
-*.dc.blade[*].diskSize = 4000GB
-*.dc.blade[*].diskReadBandwidth = 500Mbps
-*.dc.blade[*].diskWriteBandwidth = 500Mbps
-*.dc.blade[*].cpu.cpuCore[*].speed = 60000
-*.dc.blade[*].cpu.cpuCore[*].tick = 60s
-
-# Blades settings
-*.fg.numBlades = 10
-*.fg.blade[*].staticAppAssignment = false
-*.fg.blade[*].isVirtualHardware = true
-*.fg.blade[*].maxUsers = 8
-*.fg.blade[*].maxVMs = 8
-*.fg.blade[*].numCpuCores = 8
-*.fg.blade[*].memorySize = 16GB
-*.fg.blade[*].diskSize = 2000GB
-*.fg.blade[*].diskReadBandwidth = 500Mbps
-*.fg.blade[*].diskWriteBandwidth = 500Mbps
-*.fg.blade[*].cpu.cpuCore[*].speed = 60000
-*.fg.blade[*].cpu.cpuCore[*].tick = 60s
-
-## Config Ip assignment
+# Config Ip assignment
 *.configurator.config = xml("<config> \
 	<interface hosts='*.dns' address='10.0.0.1'/> \
 	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
 </config>")
-#*.configurator.dumpConfig = "ips.xml"
 
+# Controller settings
 *.controller.hy.apps = "SmartHomeAppEndToEnd"
 *.controller.ns.dns = "10.0.0.1"
-
-**.dc.**.enableQueue = false
-**.dc.**.hasCloudEvents = false
-**.dc.serviceDeployed = "service"
-
-**.fg.**.enableQueue = false
-**.fg.**.hasCloudEvents = false
-**.fg.serviceDeployed = "service2"
-
-**.dc.stack.numApps = 1
-**.dc.stack.app[0].typename = "SimService"
-**.dc.stack.app[0].replyDelay = 0s
-**.dc.stack.app[0].localPort = 443
-
-**.fg.stack.numApps = 1
-**.fg.stack.app[0].typename = "SimService"
-**.fg.stack.app[0].replyDelay = 0s
-**.fg.stack.app[0].localPort = 443
 
 [Config targetDc]
 *.serviceName = "service"
