fix: General fixes and improvements overall
The focus was on improving the dns subsystem and the application
parameter handling to ensure the proper flexibility for the different
kinds of parameters. Also unit handling should've improved as more of
the key functionality is extracted from the kernel of the simulator.

--- a/.gitignore
+++ b/.gitignore
@@ -50,15 +50,15 @@ simulations/**/results/
 simulations/**/results/*.*
 
 # Executables
-Simcan2Cloud
-Simcan2Cloud_dbg
+Simcan2Fog
+Simcan2Fog_dbg
 
 # GUI files
 .qtenvrc
 
 # VsCode configuration files
 .vscode/
-/.computed/
+.computed/
 
 **/.ipynb_checkpoints
 **/.jupyter_ystore.db
