feat(DnsStubResolver): Implemented the new and improved stub resolver
In proxy showcases one can see, with the DNS configuration, the interaction
of the elements involved in the DNS ecosystem (server, resolver and the stub resolver)

Next step: Implementing in the CloudProvider and Users the notion of regions so the deployments
can be targeted to the Fog/Cloud depending on their needs.

--- a/showcases/proxy/omnetpp.ini
+++ b/showcases/proxy/omnetpp.ini
@@ -1,6 +1,4 @@
 [General]
-network = ProxyNet
-
 # Config Ip assignment
 *.configurator.config = xml("<config> \
 	<interface hosts='*.server' address='10.0.0.1'/> \
@@ -14,9 +12,37 @@ network = ProxyNet
 # Logging? 
 *.switch.**.cmdenv-log-level = off
 
+# Limit the simulation time
+sim-time-limit = 10s
+
 [NoDNS]
+network = ProxyNet
 *.client.hostedApp.userAppName = "ClientEndpoint"
 *.client.hostedApp.app.servingHost = "10.0.0.1"
 *.server.hostedApp.userAppName = "ServerEndpoint"
 *.*.hostedApp.app.serviceName = "test"
 *.*.hostedApp.pid = 0
+
+[DNS]
+network = ProxyNet2
+*.client.hostedApp.resolverPath = "^.^.resolver"
+*.server.hostedApp.resolverPath = "^.^.resolver"
+*.*.resolver.ispResolver = "10.0.0.3"
+
+*.client.hostedApp.userAppName = "ClientEndpoint"
+*.client.hostedApp.app.servingHost = "test.us-east-1.com"
+*.server.hostedApp.userAppName = "ServerEndpoint"
+*.*.hostedApp.app.serviceName = "test"
+*.*.hostedApp.pid = 0
+
+# Config Ip assignment
+*.configurator.config = xml("<config> \
+	<interface hosts='*.server' address='10.0.0.1'/> \
+	<interface hosts='*.dns' address='10.0.0.2'/> \
+	<interface hosts='*.resolver' address='10.0.0.3'/> \
+	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
+</config>")
+
+# Load entries into DNS
+*.dns.db.zoneConfig = readJSON("DnsZone.json")
+*.resolver.db.zoneConfig = readJSON("ResolverZones.json")
