feat(showcases): Added IoT showcase
This showcase highlights the capabilities of Simcan2Fog to emulate IoT environments.

--- a/showcases/proxy/omnetpp.ini
+++ b/showcases/proxy/omnetpp.ini
@@ -1,4 +1,10 @@
 [General]
+# Disabling statistic recording
+**.statistic-recording = false  ## from a @statistic in ned file
+**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
+**.vector-recording = false ## output vector (recorded using cOutVector objects)
+**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
+
 # Config Ip assignment
 *.configurator.config = xml("<config> \
 	<interface hosts='*.server' address='10.0.0.1'/> \
