fix: Fixing experiments so it adapts to the newer changes

--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -3,24 +3,62 @@ network = SimpleFogNetwork
 
 # Standard configuration
 include ../Templates/general.ini
-include delays.ini
 
-# Nodes configuration
-include dc.ini
-include fog.ini
+## Random seeds fix
+num-rngs = 4
+**.local.ipv4Delayer.rng-0 = 1
+**.metropolitan.ipv4Delayer.rng-0 = 2
+**.backbone.ipv4Delayer.rng-0 = 3
 
-# Config Ip assignment
-*.configurator.config = xml("<config> \
-	<interface hosts='*.dns' address='10.0.0.1'/> \
-	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
-</config>")
+# Networking settings
+*.local.ipv4Delayer.config = xmldoc("network/local.xml")
+*.metropolitan.ipv4Delayer.config = xmldoc("network/metropolitan.xml")
+*.backbone.ipv4Delayer.config = xmldoc("network/backbone.xml")
+*.configurator.config = readXML("network/networkconf.xml")
+*.dns.db.zoneConfig = readJSON("network/dnszones.json")
+**.ipv4.arp.typename = "GlobalArp"
 
-# Controller settings
-*.controller.hy.apps = "SmartHomeAppEndToEnd"
-*.controller.ns.dns = "10.0.0.1"
+# Blades settings -- DC
+*.dc.numBlades = 40
+*.dc.zone = "dc"
+*.dc.blade[*].staticAppAssignment = false
+*.dc.blade[*].maxUsers = 16
+*.dc.blade[*].maxVMs = 16
+*.dc.blade[*].numCpuCores = 16
+*.dc.blade[*].memorySize = 64GB
+*.dc.blade[*].diskSize = 4000GB
+*.dc.blade[*].diskReadBandwidth = 500Mbps
+*.dc.blade[*].diskWriteBandwidth = 500Mbps
+*.dc.blade[*].cpu.cpuCore[*].speed = 60000
+*.dc.blade[*].cpu.cpuCore[*].tick = 60s
+
+# Blades settings -- Fog
+*.fg.numBlades = 10
+*.fg.zone = "fg"
+*.fg.blade[*].staticAppAssignment = false
+*.fg.blade[*].maxUsers = 8
+*.fg.blade[*].maxVMs = 8
+*.fg.blade[*].numCpuCores = 8
+*.fg.blade[*].memorySize = 16GB
+*.fg.blade[*].diskSize = 2000GB
+*.fg.blade[*].diskReadBandwidth = 500Mbps
+*.fg.blade[*].diskWriteBandwidth = 500Mbps
+*.fg.blade[*].cpu.cpuCore[*].speed = 60000
+*.fg.blade[*].cpu.cpuCore[*].tick = 60s
+
+# Pointers to the DataManager/MessageQueue/DNS
+**.dataManagerPath = "simData.manager"
+**.smqIp = "10.0.0.1"
+**.dns = "10.0.0.2"
+**.ispResolver = "10.0.0.2"
+
+*.user.vms = [{"name":"my-vm", "type":"VM_large"}]
+*.user.remoteApps = [{"name":"my-service", "type": "ServiceEndpoint","platform":"vm"}]
+*.user.localApps = [{"name":"local", "type": "ProbingEndpoint", "dependsOn":"my-service"}]
+*.user.sensors = ["sensor"]
 
 [Config targetDc]
-*.serviceName = "service"
+*.user.deploymentZone = "dc"
 
 [Config targetFog]
-*.serviceName = "service2"
+*.user.deploymentZone = "fg"
