--- a/showcases/iot/omnetpp.ini
+++ b/showcases/iot/omnetpp.ini
@@ -30,8 +30,8 @@ seed-0-mt = 0
 **.arp.typename = "GlobalArp"
 **.netmaskRoutes = ""
 *.radioMedium.backgroundNoise.power = -110dBm
-*.configurator.config = xmldoc("startopology.xml")
-*.configurator.addStaticRoutes = false
+#*.configurator.config = xmldoc("startopology.xml")
+#*.configurator.addStaticRoutes = false
 
 # Controller configuration
 # Should have wlan0 --> for listening events and sending commands
