--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -1,10 +1,21 @@
 [General]
+# General settings
 network = SimpleFogNetwork
+print-undisposed=true
+sim-time-limit = 1h
 
-# Standard configuration
-include ../Templates/general.ini
+include signals-and-events.ini
 
-## Random seeds fix
+# DataEngine settings
+*.simData.manager.experiment = "Test"
+*.simData.engine.typename = "JsonDataEngine"
+*.simData.engine.apps = readJSON("../../database/json/apps.json")
+*.simData.engine.vms = readJSON("../../database/json/vms.json")
+*.simData.engine.slas = []
+*.simData.engine.users = []
+*.simData.engine.experiments = []
+
+# Pseudo-random seeds fix
 num-rngs = 4
 **.local.ipv4Delayer.rng-0 = 1
 **.metropolitan.ipv4Delayer.rng-0 = 2
@@ -52,10 +63,14 @@ num-rngs = 4
 **.dns = "10.0.0.2"
 **.ispResolver = "10.0.0.2"
 
-*.user.vms = [{"name":"my-vm", "type":"VM_large"}]
-*.user.remoteApps = [{"name":"my-service", "type": "ServiceEndpoint","platform":"vm"}]
-*.user.localApps = [{"name":"local", "type": "ProbingEndpoint", "dependsOn":"my-service"}]
+*.user.vms = [{"name":"my-vm", "type":"VM_small"}]
+*.user.remoteApps = [{"name":"my-service", "type": "SmallIotService","platform":"my-vm"}]
+*.user.localApps = [{"name":"local", "type": "SmallIotApp", "dependsOn":"my-service"}]
 *.user.sensors = ["sensor"]
+*.netStack.nodeTopic = "user"
+
+*.sensor.model.controllerPath = "^.^.controller"
+*.sensor.model.controllerInterface = "eth0"
 
 [Config targetDc]
 *.user.deploymentZone = "dc"
