feat(EdgeMediumScenario): Adapted and fixed errors in this scenario
Now while deployments seem to be fine, probably should add load-balancing
in CloudProvider's algorithm instead of behaving like FirstFit, there's the
interesting effect that the InternetCloud modules are not "addding" delays.

--- a/showcases/dc/omnetpp.ini
+++ b/showcases/dc/omnetpp.ini
@@ -28,6 +28,7 @@ network = DcShowcase
 # Dc Blade settings
 *.dataCentre.numBlades = 4
 *.dataCentre.zone = "us-east-1"
+*.dataCentre.domain = "us-east-1.com"
 *.dataCentre.blade[*].maxUsers = 16
 *.dataCentre.blade[*].maxVMs = 16
 *.dataCentre.blade[*].numCpuCores = 16
