--- a/simulations/EdgeMediumScenario/omnetpp.ini
+++ b/simulations/EdgeMediumScenario/omnetpp.ini
@@ -1,75 +1,39 @@
 [General]
-## TEMPORAL
-print-undisposed=true
-
-## Time resolution
-sim-time-limit = 1h
-#simtime-resolution = ps
-
-## Comand line environment
-cmdenv-express-mode = false
-cmdenv-performance-display=false
-cmdenv-event-banners=false
-#ned-path = ../../src;../;
-
-## Network
+# General settings
 network = MediumNet
+print-undisposed=true
+sim-time-limit = 1h
 
-## Log
-**.cloudProvider.cmdenv-log-level = off
-**.userGenerator.cmdenv-log-level = error
-**.dcManager.cmdenv-log-level = error
-**.cmdenv-log-level = off	## off, error, info, debug and trace
-cmdenv-log-prefix = "(%t):[%l] %m  "
+include signals-and-events.ini
 
-## Allow to examine details of recorded history of a simulation, focusing on the behavior instead of the statistical results.
-#record-eventlog = false
-#**.module-eventlog-recording = false
-eventlog-message-detail-pattern = *:userID,strVmId,isResponse,operation,result
+# DataEngine settings
+*.simData.manager.experiment = "Test"
+*.simData.engine.typename = "JsonDataEngine"
+*.simData.engine.apps = readJSON("../../database/json/apps.json")
+*.simData.engine.vms = readJSON("../../database/json/vms.json")
+*.simData.engine.slas = []
+*.simData.engine.users = []
+*.simData.engine.experiments = []
 
-## Recording of simulation results - recordScalar() - recordStatistic()
-
-#**.statistic-recording = false  ## from a @statistic in ned file
-#**.scalar-recording = false ## scalar or a statistic object (cStdDev to record summary statistics)
-#**.vector-recording = false ## output vector (recorded using cOutVector objects)
-#**.bin-recording = false ##  bins of a histogram object (cHistogram, cPSquare, cKSplit)
-
-**.sensor**.statistic-recording = false
-**.actuator**.statistic-recording = false
-**.ap.**.statistic-recording = false
-**.dns**.statistic-recording = false
-**.eth[*].**.statistic-recording = false
-**.ipv4.**.statistic-recording = false
-
-**.dns**.scalar-recording = false
-**.ap**.scalar-recording = false
-**.sensor**.scalar-recording = false
-**.actuator**.scalar-recording = false
-**.eth[*].**.scalar-recording = false
-**.ipv4.**.scalar-recording = false
-
-## Random seeds fix
+# Pseudo-random seeds fix
 num-rngs = 4
 **.local.ipv4Delayer.rng-0 = 1
-**.local.ipv4Delayer.config = xmldoc("local.xml")
 **.metropolitan.ipv4Delayer.rng-0 = 2
-**.metropolitan.ipv4Delayer.config = xmldoc("metropolitan.xml")
 **.backbone.ipv4Delayer.rng-0 = 3
-**.backbone.ipv4Delayer.config = xmldoc("backbone.xml")
 
-# SimSchema settings
-*.simData.simSchema.typename = "SimSchemaMySQL"
-*.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
-*.simData.manager.experiment = "Test"
-
-# Routing settings
+# Networking settings
+*.local.ipv4Delayer.config = xmldoc("network/local.xml")
+*.metropolitan.ipv4Delayer.config = xmldoc("network/metropolitan.xml")
+*.backbone.ipv4Delayer.config = xmldoc("network/backbone.xml")
+*.configurator.config = readXML("network/networkconf.xml")
+*.dns.db.zoneConfig = readJSON("network/dnszones.json")
 **.ipv4.arp.typename = "GlobalArp"
-*.*.ipv4.routingTable.netmaskRoutes = ""
+#**.ipv4.routingTable.netmaskRoutes = ""
 
 # Blades settings
 *.dc.numBlades = 40
+*.dc.zone = "cloud"
 *.dc.blade[*].staticAppAssignment = false
-*.dc.blade[*].isVirtualHardware = true
 *.dc.blade[*].maxUsers = 16
 *.dc.blade[*].maxVMs = 16
 *.dc.blade[*].numCpuCores = 16
@@ -82,8 +46,8 @@ num-rngs = 4
 
 # Blades settings
 *.fg*.numBlades = 10
+*.fg*.zone = "edge"
 *.fg*.blade[*].staticAppAssignment = false
-*.fg*.blade[*].isVirtualHardware = true
 *.fg*.blade[*].maxUsers = 8
 *.fg*.blade[*].maxVMs = 8
 *.fg*.blade[*].numCpuCores = 8
@@ -94,42 +58,17 @@ num-rngs = 4
 *.fg*.blade[*].cpu.cpuCore[*].speed = 60000
 *.fg*.blade[*].cpu.cpuCore[*].tick = 60s
 
-## Config Ip assignment
-*.configurator.config = xml("<config> \
-	<interface hosts='*.dns' address='10.0.0.1'/> \
-	<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
-</config>")
-#*.configurator.dumpConfig = "ips.xml"
+# Pointers to the DataManager/MessageQueue/DNS
+**.dataManagerPath = "simData.manager"
+**.smqIp = "10.0.0.1"
+**.dns = "10.0.0.2"
+**.ispResolver = "10.0.0.2"
 
-**.dc.**.enableQueue = false
-**.dc.**.hasCloudEvents = false
-**.dc.serviceDeployed = "service"
-
-**.fg*.**.enableQueue = false
-**.fg*.**.hasCloudEvents = false
-**.fg1.serviceDeployed = "fg1"
-**.fg2.serviceDeployed = "fg2"
-**.fg3.serviceDeployed = "fg3"
-**.fg4.serviceDeployed = "fg4"
-
-**.dc.stack.numApps = 1
-**.dc.stack.app[0].typename = "SimService"
-**.dc.stack.app[0].replyDelay = 0s
-**.dc.stack.app[0].localPort = 443
-
-**.fg*.stack.numApps = 1
-**.fg*.stack.app[0].typename = "SimService"
-**.fg*.stack.app[0].replyDelay = 0s
-**.fg*.stack.app[0].localPort = 443
-
+# Select kind of tile/users
 *.users[*].typename = "SmartHouse"
-**.controller.ns.dns = "10.0.0.1"
 
 [Config targetDc]
-*.users*.serviceName = "service"
+*.users*.user.deploymentZone = "cloud"
 
 [Config targetFog]
-*.users[0..1].serviceName = "fg1"
-*.users[2..3].serviceName = "fg2"
-*.users[4..6].serviceName = "fg3"
-*.users[7..9].serviceName = "fg4"
+*.users*.user.deploymentZone = "edge"
