--- a/simulations/EdgeScenario/omnetpp.ini
+++ b/simulations/EdgeScenario/omnetpp.ini
@@ -31,7 +31,7 @@ num-rngs = 4
 
 # Blades settings -- DC
 *.dc.numBlades = 40
-*.dc.zone = "dc"
+*.dc.zone = "cloud"
 *.dc.blade[*].staticAppAssignment = false
 *.dc.blade[*].maxUsers = 16
 *.dc.blade[*].maxVMs = 16
@@ -45,7 +45,7 @@ num-rngs = 4
 
 # Blades settings -- Fog
 *.fg.numBlades = 10
-*.fg.zone = "fg"
+*.fg.zone = "edge"
 *.fg.blade[*].staticAppAssignment = false
 *.fg.blade[*].maxUsers = 8
 *.fg.blade[*].maxVMs = 8
@@ -73,7 +73,7 @@ num-rngs = 4
 *.sensor.model.controllerInterface = "eth0"
 
 [Config targetDc]
-*.user.deploymentZone = "dc"
+*.user.deploymentZone = "cloud"
 
 [Config targetFog]
-*.user.deploymentZone = "fg"
+*.user.deploymentZone = "edge"
