--- a/src/Makefile
+++ b/src/Makefile
@@ -46,7 +46,9 @@ OBJS = \
     $O/s2f/architecture/dns/registry/DnsRegistryService.o \
     $O/s2f/architecture/dns/resolver/DnsResolverService.o \
     $O/s2f/architecture/dns/server/DnsServiceSimplified.o \
+    $O/s2f/architecture/messagequeue/MessageQueueIn.o \
     $O/s2f/architecture/messagequeue/MessageQueueManager.o \
+    $O/s2f/architecture/messagequeue/MessageQueueOut.o \
     $O/s2f/architecture/messagequeue/internals/SinkDelegate.o \
     $O/s2f/architecture/messagequeue/internals/SourceDelegate.o \
     $O/s2f/architecture/messagequeue/services/PullService.o \
