fix: Fixed DNS timeout sequence
Also gave the cloud provider the criteria to load balance across nodes
in a zone, instead of overloading only one node.

--- a/simulations/EdgeMediumScenario/omnetpp.ini
+++ b/simulations/EdgeMediumScenario/omnetpp.ini
@@ -45,14 +45,14 @@ num-rngs = 4
 *.dc.blade[*].cpu.cpuCore[*].tick = 60s
 
 # Blades settings
-*.fg*.numBlades = 10
+*.fg*.numBlades = 1
 *.fg*.zone = "edge"
 *.fg*.blade[*].staticAppAssignment = false
 *.fg*.blade[*].maxUsers = 8
 *.fg*.blade[*].maxVMs = 8
 *.fg*.blade[*].numCpuCores = 8
-*.fg*.blade[*].memorySize = 16GB
-*.fg*.blade[*].diskSize = 2000GB
+*.fg*.blade[*].memorySize = 16GiB
+*.fg*.blade[*].diskSize = 2TiB
 *.fg*.blade[*].diskReadBandwidth = 500Mbps
 *.fg*.blade[*].diskWriteBandwidth = 500Mbps
 *.fg*.blade[*].cpu.cpuCore[*].speed = 60000
